http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-05-07 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.6.0


2018-05-03 niel
	Chg: Remove unnecessary '\n' from start of 'release have been disabled/terminated by Releases'
2018-05-02 niel
	Fix: Added statement termination (';') to Tmux main window update strings. Prevents the shell
		from interpreting them as one statement.
2018-04-16 niel
	Mrg: dev-console-command-verify branch. This adds the 'tpg' option (to './zed verify tables'
		sub-command), which checks for missing tables of active groups. It does not delete tables of
		inactive groups.
2018-04-05 niel
	Fix: Missing PHPMailer object creation.
2018-04-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.5.0


2018-03-23 niel
	Fix: Namespace issue for PHPMailer class.
	Chg: Refactored Misc::sendEmail() to use provided $from address as the 'reply-to' field (and to
		make reading it easier.
2018-03-05 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.4.0


2018-02-27 niel
	Mrg: dev-phpmailer-migration branch. This upgrades the code to use v6.0 of PHPMailer.
2018-02-23 niel
	Mrg: PR 2571, from lawsontyler - GitHub Issue 2530 - Use the existing function that updates git
2018-02-01 niel
	Upd: Updated dependencies.
	Chg: Refactored verify console command to use sub-commands like lithium's g11n console command.
2018-01-08 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.3.0


2017-12-21 niel
	Add: Merging in dev-allasmgr. This adds the option to treat ALL groups as Multigroup.
2017-12-18 niel
	Chg: Additional info for debugging timezone problems.
2017-12-15 niel